# Iris

./: .gitignore  Dockerfile  Dockerfile.gpu  LICENSE  README.md  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml  requirements.txt  server.py
.devcontainer/: Dockerfile  devcontainer.json
app/: components.py  main.py  ui_concepts_body.txt
app/tabs/: __init__.py  backup.py  collections.py  concepts.py  duplicates.py  gallery.py  import_tab.py  search.py
core/: app_config.py  app_operations.py  backend.py  backup.py  browser_session.py  concepts.py  db_manager.py  deleted_registry.py  duplicates.py  evaluation.py  file_ops.py  hardware.py  i18n.py  import_review.py  import_suggestions.py  indexer.py  indexer_db.py  media_inventory.py  media_metadata.py  perf.py  search_engine.py  search_types.py  taxonomy.py  vector_store.py  web_enrichment.py
docs/: duplicate_pipeline.md  embedding_similarity_media.md  index.html  web_enrichment.md
scripts/: _e2e_dedup_check.py  backfill_metadata.py  benchmark.py  build_sample_index.py  clean_generated.py  clean_vocabulary.py  cleanup_db.py  compare_models.py  create_eval_pack.py  create_golden_set.py  enrich_metadata.py  evaluate_captions.py  evaluate_golden_set.py  evaluate_search.py  find_duplicates.py  generate_map.py  gpu_probe.py  import_media.py  install.sh  migrate_library.py  model_capacity.py  model_quality_sweep.py  optimize.py  optimize_golden.py  run_app.sh  run_server.py  run_streamlit.py  run_tests.sh  sample_media.py  sync_index_after_trash.py  test_playground.py  test_queries.py  test_release.sh  utils_duplicates.py  utils_metadata.py
static/: api.js  app.js  collections.js  concepts.js  duplicates.js  gallery.js  import-review.js  search.js  style.css  system.js
templates/: index.html
tests/: conftest.py  test_api.py  test_app_config.py  test_app_operations.py  test_backfill_metadata.py  test_backup.py  test_browser_session.py  test_clean_vocabulary.py  test_dedup_gates.py  test_duplicates.py  test_enrichment_api.py  test_enrichment_job.py  test_evaluation.py  test_import_review.py  test_import_review_api.py  test_import_suggestions.py  test_indexer_schema.py  test_media_inventory.py  test_media_metadata.py  test_search_engine.py  test_search_quality.py  test_static_wiring.py  test_ui_interactions.py  test_web_enrichment.py
utils/: cleanup.py  duplicates.py  generate_map.py  metadata.py  remove_comments.py
