[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meme-compass"
version = "0.2.0"
description = "Busca semantica multimodal para memes locais."
requires-python = ">=3.10"
dependencies = [
    "deep-translator>=1.9,<2",
    "easyocr>=1.7,<2",
    "faiss-cpu>=1.7",
    "numpy>=1.26",
    "openai-whisper>=20250625",
    "opencv-python-headless>=4.8",
    "pillow>=10",
    "sentence-transformers>=3",
    "Send2Trash>=1.8",
    "streamlit>=1.35",
    "timm>=1",
    "torch>=2.2",
    "torchvision>=0.17",
    "torchaudio>=2.2",
    "tqdm>=4.66",
    "transformers==4.44.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]
metadata = [
    "piexif>=1.1",
]

[project.scripts]
meme-compass-app = "scripts.run_streamlit:main"
meme-compass-index = "core.indexer:main"
meme-compass-benchmark = "scripts.benchmark:main"
meme-compass-sample = "scripts.sample_media:main"
meme-compass-eval-search = "scripts.evaluate_search:main"
meme-compass-eval-captions = "scripts.evaluate_captions:main"
meme-compass-gpu-probe = "scripts.gpu_probe:main"
meme-compass-golden = "scripts.create_golden_set:main"
meme-compass-eval-golden = "scripts.evaluate_golden_set:main"
meme-compass-enrich-metadata = "scripts.enrich_metadata:main"
meme-compass-find-duplicates = "scripts.find_duplicates:main"
meme-compass-sync-index = "scripts.sync_index_after_trash:main"
meme-compass-import-media = "scripts.import_media:main"
meme-compass-migrate-library = "scripts.migrate_library:main"

[tool.setuptools]
packages = ["app", "core", "scripts", "utils"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "scripts/test_playground.py",
    "scripts/test_queries.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
