[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iris-media"
version = "0.3.0"
description = "Local multimodal AI media intelligence — index, search, and organize your media library with AI."
requires-python = ">=3.10"
dependencies = [
    "deep-translator>=1.9,<2",
    "easyocr>=1.7,<2",
    "faiss-cpu>=1.7",
    "fastapi>=0.115,<1",
    "numpy>=1.26",
    "openai-whisper>=20250625",
    "opencv-python-headless>=4.8",
    "pillow>=10",
    "python-multipart>=0.0.9",
    "sentence-transformers>=3",
    "Send2Trash>=1.8",
    "timm>=1",
    "torch>=2.2",
    "torchvision>=0.17",
    "torchaudio>=2.2",
    "tqdm>=4.66",
    "transformers==4.44.2",
    "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]
metadata = [
    "piexif>=1.1",
]

[project.scripts]
iris-app = "scripts.run_server:main"
iris-index = "core.indexer:main"
iris-benchmark = "scripts.benchmark:main"
iris-sample = "scripts.sample_media:main"
iris-eval-search = "scripts.evaluate_search:main"
iris-eval-captions = "scripts.evaluate_captions:main"
iris-gpu-probe = "scripts.gpu_probe:main"
iris-golden = "scripts.create_golden_set:main"
iris-eval-golden = "scripts.evaluate_golden_set:main"
iris-enrich-metadata = "scripts.enrich_metadata:main"
iris-find-duplicates = "scripts.find_duplicates:main"
iris-sync-index = "scripts.sync_index_after_trash:main"
iris-import-media = "scripts.import_media:main"
iris-migrate-library = "scripts.migrate_library:main"

[tool.setuptools]
packages = ["core", "scripts"]
py-modules = ["server"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "scripts/test_playground.py",
    "scripts/test_queries.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
